--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -10,15 +10,14 @@ per_page: 10
     p
       = link_to 'Previous page', prev_page
 
-- page_articles.each_with_index do |article, i|
-  h2
-    = link_to article.title, article
-    span
-      = article.date.strftime('%b %e')
-  -# use article.summary(250) if you have Nokogiri available to show just
-  -# the first 250 characters
-  article
-    = article.body
+- page_articles.group_by {|a| a.date }.each do |date, articles|
+  h2 = date.strftime('%Y-%m-%d')
+  - articles.each_with_index do |article, i|
+    h3 = link_to article.title, article
+    -# use article.summary(250) if you have Nokogiri available to show just
+    -# the first 250 characters
+    article
+      = article.body
 
 - if paginate
   - if next_page
