--- a/source/layouts/index.slim
+++ b/source/layouts/index.slim
@@ -4,7 +4,7 @@ html
     meta charset="utf-8"
     meta http-equiv='X-UA-Compatible' content='IE=edge;chrome=1'
     meta name="viewport" content="width=device-width, initial-scale=1"
-    title Blog Title#{' - ' + current_article.title unless current_article.nil?}
+    title mrkn 記
     = feed_tag :atom, "#{blog.options.prefix.to_s}/feed.xml", title: "Atom Feed"
     link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap.min.css"
     link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.0/css/bootstrap-theme.min.css"
@@ -12,6 +12,8 @@ html
 
   body
     .container
+      h1 mrkn 記
+
       #main role="main"
         = yield
     
