--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -11,9 +11,10 @@ per_page: 10
       = link_to 'Previous page', prev_page
 
 - page_articles.group_by {|a| a.date }.each do |date, articles|
-  h2 = date.strftime('%Y-%m-%d')
   - articles.each_with_index do |article, i|
-    h3 = link_to article.title, article
+    h1
+      = link_to article.title, article
+      small.post-date = date.strftime('%Y-%m-%d')
     -# use article.summary(250) if you have Nokogiri available to show just
     -# the first 250 characters
     article
